<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:padding="12dp">


            <TextView

                android:id="@+id/nameTXT"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/provider_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/label_size_huge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/review_date"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textAlignment="center"
                android:text="@string/isIbclc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/rating_txt"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="-50sp"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="81dp"
                android:layout_height="27dp"
                android:layout_gravity="left"
                android:text="@string/rating_label_txt"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/review_txt"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="textMultiLine"
                android:text="@string/isIbclc"
                android:maxLines="5"
                android:minLines="2"
                android:scrollbars="vertical" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>