<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yonnyzohar.getmilk.providers.ProviderRegistration"
    tools:showIn="@layout/activity_provider_registration"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/user_image"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="@dimen/label_size_small" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_gravity="left"
             android:orientation="horizontal"
             android:padding="12dp">

             <LinearLayout
                 android:layout_width="279dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:orientation="vertical"
                 android:padding="12dp">

                 <TextView
                     android:id="@+id/profile_last_name"
                     android:layout_width="251dp"
                     android:layout_height="wrap_content"
                     android:text="@string/display_name"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textSize="17dp" />


                 <EditText

                     android:id="@+id/profile_name"
                     android:layout_width="252dp"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="@dimen/label_size_huge"
                     android:textStyle="bold" />


             </LinearLayout>

             <ImageView
                 android:id="@+id/profile_image"
                 android:layout_width="89dp"
                 android:layout_height="96dp"
                 android:src="@drawable/ic_person_black_24dp"
                 android:layout_gravity="right" />



         </LinearLayout>

         <TextView
             android:layout_width="81dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:text="@string/ibclc"
             android:textAlignment="center"
             android:textSize="12sp"
             tools:ignore="MissingConstraints" />

         <Switch
             android:id="@+id/ibclcEnt"
             android:layout_width="59dp"
             android:layout_height="40dp"
             android:layout_marginTop="15dp"
             android:scaleX="2"
             android:scaleY="2"
             android:text="" />

         <TextView

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/price_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="@dimen/label_size_small"
             />

         <EditText
             android:id="@+id/price"
             android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />


         <TextView

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bio"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="@dimen/label_size_small"
             />


         <EditText
             android:id="@+id/bio"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:inputType="textMultiLine"
             android:maxLines="3"
             android:minLines="2"
             android:scrollbars="vertical" />

         <Button
             android:layout_marginTop="20dp"
             android:textColor="#fff"
             android:textSize="@dimen/label_size_small"
             android:id="@+id/edit_cities_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedbutton_green_single_line"
             android:text="@string/edit_cities"
             tools:ignore="MissingConstraints"
             android:gravity="center"
             android:layout_gravity="center"
             android:paddingLeft="80dp"
             android:paddingRight="80dp"/>


         <Button
             android:layout_marginTop="20dp"
             android:textColor="#fff"
             android:textSize="@dimen/label_size_small"
             android:id="@+id/t_c_btn"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedbutton_green_single_line"
             android:text="@string/t_c"
             android:gravity="center"
             tools:ignore="MissingConstraints"
             android:paddingLeft="80dp"
             android:paddingRight="80dp"/>



     </LinearLayout>

    </ScrollView>

</LinearLayout>
